Allow wildcard localhost origin patterns and headers in CORS and add ChangeDetectorRef to login